[package]
name = "batch-proof-mock"
version = "0.6.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.0.0", default-features = false, features = ["unstable"] }
risc0-zkvm-platform = { version = "2.0.0", features = ["heap-embedded-alloc"] }

anyhow = "1.0.95"
citrea-primitives = { path = "../../../../crates/primitives" }
citrea-risc0-adapter = { path = "../../../../crates/risc0" }
citrea-stf = { path = "../../../../crates/citrea-stf" }
const-hex = "1.14"
sov-mock-da = { path = "../../../../crates/sovereign-sdk/adapters/mock-da", default-features = false }
sov-modules-api = { path = "../../../../crates/sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-modules-stf-blueprint = { path = "../../../../crates/sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-rollup-interface = { path = "../../../../crates/sovereign-sdk/rollup-interface" }
sov-state = { path = "../../../../crates/sovereign-sdk/module-system/sov-state" }

[features]
testing = ["citrea-primitives/testing", "risc0-zkvm-platform/sys-getenv"]

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", tag = "v0.6.0-risczero.0" }
blst = { git = "https://github.com/risc0/blst", tag = "blst/v0.3.14-risczero.0" }

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
