[package]
name = "light-client-proof-mock"
version = "0.7.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.0.2", default-features = false, features = ["unstable", "std"] }
risc0-zkvm-platform = { version = "2.0.2", features = ["sys-getenv"] }

anyhow = "1.0.95"
sov-mock-da = { path = "../../../../crates/sovereign-sdk/adapters/mock-da", default-features = false }

citrea-light-client-prover = { path = "../../../../crates/light-client-prover", default-features = false }
citrea-primitives = { path = "../../../../crates/primitives" }
citrea-risc0-adapter = { path = "../../../../crates/risc0" }
citrea-risc0-batch-proof = { path = "../../batch-proof" }
sov-modules-api = { path = "../../../../crates/sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-modules-stf-blueprint = { path = "../../../../crates/sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-rollup-interface = { path = "../../../../crates/sovereign-sdk/rollup-interface" }
sov-state = { path = "../../../../crates/sovereign-sdk/module-system/sov-state" }

[features]
testing = ["citrea-primitives/testing", "citrea-risc0-batch-proof/testing"]

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
